# tinytorch

./: CMakeLists.txt  README.md
include/: autograd.h  nn.h  optim.h  tensor.h
src/: autograd.c  optim.c  tensor.c
src/examples/: data_creator.c
src/examples/example_1/: compare.py  main.c  run_1.c
src/examples/example_2/: compare.py  main.c  run_2.c  tictactoe.txt
src/nn/: conv.c  cross_entroy.c  linear.c  relu.c
